<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.darlington.standardbadmintonscoreapp.MainActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:background="@drawable/green"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textAlignment="center"
                android:layout_gravity="center"                android:textColor="@android:color/black"
                android:text="@string/info"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:layout_margin="10dp"
                        android:text="@string/player1"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="serif"
                        android:hint="Enter Name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:layout_margin="10dp"
                        android:text="@string/gender"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <RadioGroup
                        android:id="@+id/gender1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/genderMale1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/male"
                            android:onClick="gender1"/>

                        <RadioButton
                            android:id="@+id/genderFemale1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/female"
                            android:onClick="gender1"/>
                    </RadioGroup>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:layout_margin="10dp"
                        android:text="@string/player2"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                    <EditText
                        android:id="@+id/name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="serif"
                        android:hint="Enter Name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:layout_margin="10dp"
                        android:text="@string/gender"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <RadioGroup
                        android:id="@+id/gender2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/genderMale2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/male"
                            android:onClick="gender2"/>

                        <RadioButton
                            android:id="@+id/genderFemale2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/female"
                            android:onClick="gender2"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:onClick="startGame"
        android:text="@string/start"
        android:fontFamily="serif"
        android:textAllCaps="true"/>

</RelativeLayout>